recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:6: error: type mismatch;
 found   : Int
 required: scala.collection.GenTraversableOnce[?]
    reverse(l.tail) ++ l.head::Nil;
                         ^